--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1", 
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.21.2" 
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
